2598. Про внесення змін до Конституції України (щодо децентралізації влади)

--- a/Конституція.md
+++ b/Конституція.md
@@ -602,9 +602,9 @@
 
 28) дострокове припинення повноважень Верховної Ради Автономної Республіки Крим за наявності висновку Конституційного Суду України про порушення нею Конституції України або законів України; призначення позачергових виборів до Верховної Ради Автономної Республіки Крим;
 
-29) утворення і ліквідація районів, встановлення і зміна меж районів і міст, віднесення населених пунктів до категорії міст, найменування і перейменування населених пунктів і районів;
+29) утворення і ліквідація громад, округів, областей, встановлення і зміна їхніх меж, віднесення поселень до категорії сіл, селищ, міст, найменування і перейменування поселень, громад, округів, областей за поданням Кабінету Міністрів України; 
 
-30) призначення чергових та позачергових виборів до органів місцевого самоврядування;
+30) призначення позачергових виборів до органів місцевого самоврядування;
 
 31) затвердження протягом двох днів з моменту звернення Президента України указів про введення воєнного чи надзвичайного стану в Україні або в окремих її місцевостях, про загальну або часткову мобілізацію, про оголошення окремих місцевостей зонами надзвичайної екологічної ситуації;
 
@@ -698,7 +698,7 @@
 
 11) засади утворення і діяльності політичних партій, інших об'єднань громадян, засобів масової інформації;
 
-12) організація і діяльність органів виконавчої влади, основи державної служби, організації державної статистики та інформатики;
+12) організація і діяльність органів виконавчої влади, правовий статус префекта, основи державної служби, організації державної статистики та інформатики;
 
 13) територіальний устрій України;
 
@@ -706,7 +706,7 @@
 
 15) засади місцевого самоврядування;
 
-16) статус столиці України; спеціальний статус інших міст;
+16) адміністративно-територіальний устрій, правовий статус адміністративно-територіальних одиниць; правовий статус міста Києва як столиці України;
 
 17) основи національної безпеки, організації Збройних Сил України і забезпечення громадського порядку;
 
@@ -838,6 +838,8 @@
 7) призначає позачергові вибори до Верховної Ради України у строки, встановлені цією Конституцією;
 
 8) припиняє повноваження Верховної Ради України у випадках, передбачених цією Конституцією;
+
+8-1) тимчасово зупиняє повноваження голови громади, складу ради громади, окружної, обласної ради за поданням префекта та призначає тимчасового державного уповноваженого у випадках, визначених цією Конституцією;
 
 9) вносить за пропозицією коаліції депутатських фракцій у Верховній Раді України, сформованої відповідно до статті 83 Конституції України, подання про призначення Верховною Радою України Прем’єр-міністра України в строк не пізніше ніж на п’ятнадцятий день після одержання такої пропозиції;
 
@@ -982,7 +984,7 @@
 
 8) організовує і забезпечує здійснення зовнішньоекономічної діяльності України, митної справи;
 
-9) спрямовує і координує роботу міністерств, інших органів виконавчої влади;
+9) спрямовує та координує роботу міністерств, інших центральних органів виконавчої влади та префектів;
 
 9-1. утворює, реорганізовує та ліквідовує відповідно до закону міністерства та інші центральні органи виконавчої влади, діючи в межах коштів, передбачених на утримання органів виконавчої влади;
 
@@ -996,45 +998,39 @@
 
 Нормативно-правові акти Кабінету Міністрів України, міністерств та інших центральних органів виконавчої влади підлягають реєстрації в порядку, встановленому законом.
 
-**Стаття 118.** Виконавчу владу в областях і районах, містах Києві та Севастополі здійснюють місцеві державні адміністрації.
+**Стаття 118.** Виконавчу владу в областях і округах здійснюють територіальні органи центральних органів виконавчої влади.
 
-Особливості здійснення виконавчої влади у містах Києві та Севастополі визначаються окремими законами України.
+Представниками держави в округах і областях, у місті Києві є префекти.
 
-Склад місцевих державних адміністрацій формують голови місцевих державних адміністрацій.
+Склад офісу префекта формує префект.
 
-Голови місцевих державних адміністрацій призначаються на посаду і звільняються з посади Президентом України за поданням Кабінету Міністрів України.
+Префект призначається на посаду та звільняється з посади Президентом України за поданням Кабінету Міністрів України.
 
-Голови місцевих державних адміністрацій при здійсненні своїх повноважень відповідальні перед Президентом України і Кабінетом Міністрів України, підзвітні та підконтрольні органам виконавчої влади вищого рівня.
+Строк перебування префекта на посаді в одному окрузі, області, місті Києві не може перевищувати трьох років.
 
-Місцеві державні адміністрації підзвітні і підконтрольні радам у частині повноважень, делегованих їм відповідними районними чи обласними радами.
+Префект є державним службовцем.
 
-Місцеві державні адміністрації підзвітні і підконтрольні органам виконавчої влади вищого рівня.
+Префект під час здійснення своїх повноважень підзвітний та підконтрольний Президентові України та Кабінетові Міністрів України.
 
-Рішення голів місцевих державних адміністрацій, що суперечать Конституції та законам України, іншим актам законодавства України, можуть бути відповідно до закону скасовані Президентом України або головою місцевої державної адміністрації вищого рівня.
+**Стаття 119.** Префект на відповідній території:
 
-Обласна чи районна рада може висловити недовіру голові відповідної місцевої державної адміністрації, на підставі чого Президент України приймає рішення і дає обґрунтовану відповідь.
+1) здійснює адміністративний нагляд за додержанням Конституції і законів України органами місцевого самоврядування;
 
-Якщо недовіру голові районної чи обласної державної адміністрації висловили дві третини депутатів від складу відповідної ради, Президент України приймає рішення про відставку голови місцевої державної адміністрації.
+2) координує діяльність територіальних органів центральних органів виконавчої влади та здійснює адміністративний нагляд за додержанням ними Конституції та законів України, актів Президента України та Кабінету Міністрів України;
 
-**Стаття 119.** Місцеві державні адміністрації на відповідній території забезпечують:
+3) спрямовує і координує діяльність територіальних органів центральних органів виконавчої влади, забезпечує їх взаємодію з органами місцевого самоврядування в умовах воєнного або надзвичайного стану, надзвичайної екологічної ситуації;
 
-1) виконання Конституції та законів України, актів Президента України, Кабінету Міністрів України, інших органів виконавчої влади;
+4) вносить Президенту України подання про зупинення дії ухваленого радою, головою громади, окружною, обласною радою акта, що не відповідає Конституції України та створює загрозу порушення державного суверенітету, територіальної цілісності чи загрозу національній безпеці;
 
-2) законність і правопорядок; додержання прав і свобод громадян;
+5) здійснює інші повноваження, визначені законами України.
 
-3) виконання державних і регіональних програм соціально-економічного та культурного розвитку, програм охорони довкілля, а в місцях компактного проживання корінних народів і національних меншин - також програм їх національно-культурного розвитку;
+Префект на підставі і в порядку, що визначені законом, видає акти, які є обов'язковими на відповідній території.
 
-4) підготовку та виконання відповідних обласних і районних бюджетів;
+Акти префектів, видані на здійснення повноважень, визначених   пунктом 1 частини першої цієї статті, можуть бути скасовані Президентом України, а видані на здійснення повноважень, визначених пунктами 2, 3 частини першої цієї статті, – Кабінетом Міністрів України.
 
-5) звіт про виконання відповідних бюджетів та програм;
+Акти префектів, видані на здійснення повноважень, визначених   пунктом 5 частини першої цієї статті, скасовуються Президентом України,         а у визначених законом випадках – Кабінетом Міністрів України.
 
-6) взаємодію з органами місцевого самоврядування;
-
-7) реалізацію інших наданих державою, а також делегованих відповідними радами повноважень.
-
-**Стаття 120.** Члени Кабінету Міністрів України, керівники центральних та місцевих органів виконавчої влади не мають права суміщати свою службову діяльність з іншою роботою (крім викладацької, наукової та творчої роботи у позаробочий час), входити до складу керівного органу чи наглядової ради підприємства або організації, що має на меті одержання прибутку.
-
-Організація, повноваження і порядок діяльності Кабінету Міністрів України, інших центральних та місцевих органів виконавчої влади визначаються Конституцією і законами України.
+**Стаття 120.** Члени Кабінету Міністрів України, керівники центральних органів виконавчої влади та їх територіальних органів, префекти не можуть мати представницький мандат, не мають права суміщати свою службову діяльність з іншою роботою (крім викладацької, наукової та творчої роботи у позаробочий час), входити до складу керівного органу чи наглядової ради підприємства або організації, що має на меті одержання прибутку.
 
 ## Розділ VIII
 ## ПРАВОСУДДЯ
@@ -1222,13 +1218,19 @@
 ## Розділ IX
 ## ТЕРИТОРІАЛЬНИЙ УСТРІЙ УКРАЇНИ
 
-**Стаття 132.** Територіальний устрій України ґрунтується на засадах єдності та цілісності державної території, поєднання централізації і децентралізації у здійсненні державної влади, збалансованості і соціально-економічного розвитку регіонів, з урахуванням їх історичних, економічних, екологічних, географічних і демографічних особливостей, етнічних і культурних традицій.
+**Стаття 132.** Територіальний устрій України ґрунтується на засадах унітарності, єдності та цілісності державної території, децентралізації влади, субсидіарності і повсюдності місцевого самоврядування, збалансованості і стійкого соціально-економічного розвитку територій з урахуванням їх історичних, економічних, екологічних, географічних і демографічних особливостей, етнічних і культурних традицій.
 
-**Стаття 133.** Систему адміністративно-територіального устрою України складають: Автономна Республіка Крим, області, райони, міста, райони в містах, селища і села.
+**Стаття 133.** Систему адміністративно-територіального устрою України складають адміністративно-територіальні одиниці: громади, округи, області, Автономна Республіка Крим.
 
-До складу України входять: Автономна Республіка Крим, Вінницька, Волинська, Дніпропетровська, Донецька, Житомирська, Закарпатська, Запорізька, Івано-Франківська, Київська, Кіровоградська, Луганська, Львівська, Миколаївська, Одеська, Полтавська, Рівненська, Сумська, Тернопільська, Харківська, Херсонська, Хмельницька, Черкаська, Чернівецька, Чернігівська області, міста Київ та Севастополь.
+Територію України складають громади. Громада є первинною  одиницею у системі адміністративно-територіального устрою України.          
 
-Міста Київ та Севастополь мають спеціальний статус, який визначається законами України.
+Декілька суміжних громад становлять округ.
+
+Правовий статус міста Києва як столиці України визначається окремим законом.
+
+Порядок утворення, ліквідації, встановлення та зміни меж, найменування і перейменування громад, округів, областей, а також порядок утворення, найменування і перейменування та віднесення поселень до категорії сіл, селищ, міст визначаються законом.
+
+Зміна меж, найменування і перейменування громад та поселень здійснюється з урахуванням думки їх мешканців у порядку, визначеному законом
 
 ## Розділ X
 ## АВТОНОМНА РЕСПУБЛІКА КРИМ
@@ -1302,45 +1304,93 @@
 ## Розділ XI
 ## МІСЦЕВЕ САМОВРЯДУВАННЯ
 
-**Стаття 140.** Місцеве самоврядування є правом територіальної громади - жителів села чи добровільного об'єднання у сільську громаду жителів кількох сіл, селища та міста - самостійно вирішувати питання місцевого значення в межах Конституції і законів України.
+**Стаття 140.** Місцеве самоврядування є правом та спроможністю громади безпосередньо або через органи місцевого самоврядування та їх посадових осіб вирішувати питання місцевого значення в межах Конституції і законів України. 
 
-Особливості здійснення місцевого самоврядування в містах Києві та Севастополі визначаються окремими законами України.
+Громада є первинним суб’єктом місцевого самоврядування. 
 
-Місцеве самоврядування здійснюється територіальною громадою в порядку, встановленому законом, як безпосередньо, так і через органи місцевого самоврядування: сільські, селищні, міські ради та їх виконавчі органи.
+Громада є юридичною особою. 
 
-Органами місцевого самоврядування, що представляють спільні інтереси територіальних громад сіл, селищ та міст, є районні та обласні ради.
+Громада здійснює місцеве самоврядування безпосередньо шляхом виборів, місцевих референдумів, місцевих ініціатив та в інших формах, визначених законом. 
 
-Питання організації управління районами в містах належить до компетенції міських рад.
+Органами місцевого самоврядування громади є рада громади як представницький орган та виконавчі органи ради громади.
 
-Сільські, селищні, міські ради можуть дозволяти за ініціативою жителів створювати будинкові, вуличні, квартальні та інші органи самоорганізації населення і наділяти їх частиною власної компетенції, фінансів, майна.
+Рада громади сприяє діяльності створених відповідно до закону та статуту громади органів самоорганізації населення і з цією метою може наділяти їх фінансами та майном. 
 
-**Стаття 141.** До складу сільської, селищної, міської, районної, обласної ради входять депутати, які обираються жителями села, селища, міста, району, області на основі загального, рівного, прямого виборчого права шляхом таємного голосування. Строк повноважень сільської, селищної, міської, районної, обласної ради, депутати якої обрані на чергових виборах, становить п’ять років. Припинення повноважень сільської, селищної, міської, районної, обласної ради має наслідком припинення повноважень депутатів відповідної ради.
+Окружна, обласна рада є органами місцевого самоврядування, що представляють і реалізують спільні, визначені законом, інтереси громад відповідно округу, області. 
 
-Територіальні громади на основі загального, рівного, прямого виборчого права обирають шляхом таємного голосування відповідно сільського, селищного, міського голову, який очолює виконавчий орган ради та головує на її засіданнях. Строк повноважень сільського, селищного, міського голови, обраного на чергових виборах, становить п’ять років.
+Статус голів громад, депутатів рад громад, окружних, обласних рад, порядок утворення, реорганізації та ліквідації виконавчих органів ради громади, виконавчих комітетів окружних, обласних рад, обсяг їх повноважень визначаються законом.
 
-Чергові вибори сільських, селищних, міських, районних, обласних рад, сільських, селищних, міських голів відбуваються в останню неділю жовтня п’ятого року повноважень відповідної ради чи відповідного голови, обраних на чергових виборах.
+Питання організації управління районами в містах належить до компетенції рад відповідних громад.
 
-Статус голів, депутатів і виконавчих органів ради та їхні повноваження, порядок утворення, реорганізації, ліквідації визначаються законом.
+**Стаття 141.** Право голосу на виборах голови громади, депутатів ради громади, окружної, обласної ради мають громадяни України, які постійно проживають на території відповідної громади, досягли на день проведення виборів вісімнадцяти років і не визнані судом недієздатними.
 
-Голова районної та голова обласної ради обираються відповідною радою і очолюють виконавчий апарат ради.
+Головою громади, депутатом ради громади, окружної, обласної ради може бути обраний громадянин України, який досяг на день проведення виборів вісімнадцяти років, не визнаний судом недієздатним. Не може бути обраним головою громади, депутатом ради громади, окружної, обласної ради громадянин, який відбуває покарання за вчинення злочину чи має судимість за вчинення умисного злочину.
 
-**Стаття 142.** Матеріальною і фінансовою основою місцевого самоврядування є рухоме і нерухоме майно, доходи місцевих бюджетів, інші кошти, земля, природні ресурси, що є у власності територіальних громад сіл, селищ, міст, районів у містах, а також об'єкти їхньої спільної власності, що перебувають в управлінні районних і обласних рад.
+Порядок обрання депутатів окружних і обласних рад забезпечує представництво громад у межах відповідного округу, області і визначається законом.
 
-Територіальні громади сіл, селищ і міст можуть об'єднувати на договірних засадах об'єкти комунальної власності, а також кошти бюджетів для виконання спільних проектів або для спільного фінансування (утримання) комунальних підприємств, організацій і установ, створювати для цього відповідні органи і служби.
+Строк повноважень голови громади, депутатів ради громади, окружної, обласної ради, обраних на чергових виборах, становить чотири роки.
 
-Держава бере участь у формуванні доходів бюджетів місцевого самоврядування, фінансово підтримує місцеве самоврядування. Витрати органів місцевого самоврядування, що виникли внаслідок рішень органів державної влади, компенсуються державою.
+Строк повноважень голови окружної, обласної ради становить один рік. Обрання голови окружної, обласної ради відбувається на основі ротації.
 
-**Стаття 143.** Територіальні громади села, селища, міста безпосередньо або через утворені ними органи місцевого самоврядування управляють майном, що є в комунальній власності; затверджують програми соціально-економічного та культурного розвитку і контролюють їх виконання; затверджують бюджети відповідних адміністративно-територіальних одиниць і контролюють їх виконання; встановлюють місцеві податки і збори відповідно до закону; забезпечують проведення місцевих референдумів та реалізацію їх результатів; утворюють, реорганізовують та ліквідовують комунальні підприємства, організації і установи, а також здійснюють контроль за їх діяльністю; вирішують інші питання місцевого значення, віднесені законом до їхньої компетенції.
+Підстави і порядок дострокового припинення повноважень голови громади, депутата чи складу ради громади, окружної, обласної ради визначаються Конституцією і законами України.
 
-Обласні та районні ради затверджують програми соціально-економічного та культурного розвитку відповідних областей і районів та контролюють їх виконання; затверджують районні і обласні бюджети, які формуються з коштів державного бюджету для їх відповідного розподілу між територіальними громадами або для виконання спільних проектів та з коштів, залучених на договірних засадах з місцевих бюджетів для реалізації спільних соціально-економічних і культурних програм, та контролюють їх виконання; вирішують інші питання, віднесені законом до їхньої компетенції.
+Чергові вибори голів громад, депутатів усіх рад громад, окружних, обласних рад відбуваються в останню неділю жовтня четвертого року повноважень органів місцевого самоврядування, обраних на попередніх чергових місцевих виборах.
 
-Органам місцевого самоврядування можуть надаватися законом окремі повноваження органів виконавчої влади. Держава фінансує здійснення цих повноважень у повному обсязі за рахунок коштів Державного бюджету України або шляхом віднесення до місцевого бюджету у встановленому законом порядку окремих загальнодержавних податків, передає органам місцевого самоврядування відповідні об'єкти державної власності.
+Позачергові вибори голови громади, ради громади, окружної, обласної ради призначаються Верховною Радою України не пізніше 180 днів з дня дострокового припинення повноважень голови громади, складу ради громади, окружної, обласної ради, а у разі дострокового припинення повноважень у порядку, передбаченому статтею 144 цієї Конституції, – не пізніше 120 днів з дня такого припинення.
 
-Органи місцевого самоврядування з питань здійснення ними повноважень органів виконавчої влади підконтрольні відповідним органам виконавчої влади.
+Окружна, обласна рада обирає зі свого складу відповідно голову окружної ради, голову обласної ради.
 
-**Стаття 144.** Органи місцевого самоврядування в межах повноважень, визначених законом, приймають рішення, які є обов'язковими до виконання на відповідній території.
+Окружна, обласна рада призначає і звільняє голову виконавчого комітету ради і за його поданням формує склад цього органу.
 
-Рішення органів місцевого самоврядування з мотивів їх невідповідності Конституції чи законам України зупиняються у встановленому законом порядку з одночасним зверненням до суду.
+Голова громади, депутати ради громади, окружної, обласної ради не можуть мати іншого представницького мандата. Інші вимоги щодо несумісності мандата голови громади, депутата ради громади, окружної, обласної ради визначаються законом.
+
+**Стаття 142.** Матеріальною і фінансовою основою місцевого самоврядування є:
+
+1) земля, рухоме і нерухоме майно, природні ресурси, інші об'єкти комунальної власності громади; 
+
+2) місцеві податки і збори, частина загальнодержавних податків та інші доходи місцевих бюджетів.
+
+Об'єкти спільної власності громад перебувають в управлінні окружної чи обласної ради.
+
+Держава забезпечує співмірність фінансових ресурсів та обсягу повноважень органів місцевого самоврядування, визначених Конституцією та законами України.
+
+Зміна компетенції органу місцевого самоврядування здійснюється з одночасними відповідними змінами у розподілі фінансових ресурсів.
+
+Держава компенсує витрати органів місцевого самоврядування, спричинені рішеннями органів державної влади.
+
+Громади можуть об'єднувати на договірних засадах об'єкти комунальної власності, а також кошти бюджетів для виконання спільних проектів або для спільного фінансування (утримання) комунальних підприємств, організацій і установ, створювати для цього відповідні органи і служби.
+
+**Стаття 143.** Громада безпосередньо або через органи місцевого самоврядування громади та їх посадових осіб відповідно до закону: 
+
+1) управляє майном, що є в комунальній власності; 
+
+2) затверджує бюджет відповідної громади і контролює його виконання; 
+
+3) затверджує програми соціально-економічного та культурного розвитку і контролює їх виконання;
+
+4) приймає рішення щодо місцевих податків і зборів; 
+
+5) забезпечує реалізацію результатів місцевих референдумів; 
+
+6) утворює, реорганізовує та ліквідовує комунальні підприємства, організації і установи, а також здійснює контроль за їх діяльністю; 
+
+7) вирішує інші питання місцевого значення, віднесені законом до її компетенції.
+
+Компетенція обласних, окружних рад визначається Конституцією України і законом.
+
+**Стаття 144.** Ради і голови громад, виконавчі органи рад громад, окружні і обласні ради, виконавчі комітети окружних і обласних рад відповідно до закону ухвалюють акти, які є обов'язковими до виконання на відповідній території.
+
+Дію актів органів і посадових осіб місцевого самоврядування з мотивів їх невідповідності Конституції чи законам України зупиняє префект з одночасним зверненням до суду.
+
+У разі ухвалення радою, головою громади, окружною, обласною радою акта, що не відповідає Конституції України та створює загрозу порушення державного суверенітету, територіальної цілісності чи загрозу національній безпеці, Президент України за поданням префекта зупиняє указом дію відповідного акта з одночасним зверненням до Конституційного Суду України, тимчасово зупиняє повноваження голови громади, складу ради громади, окружної, обласної ради та призначає тимчасового державного уповноваженого. Тимчасовий державний уповноважений спрямовує та організовує діяльність відповідних виконавчих органів ради громади, виконавчого комітету окружної, обласної ради.
+
+Правовий статус тимчасового державного уповноваженого визначається законом.
+
+Конституційний Суд України розглядає такий указ Президента України не довше семи календарних днів.
+
+У разі визнання Конституційним Судом України акта голови громади, ради громади, окружної, обласної ради таким, що відповідає Конституції України, акти Президента України, видані відповідно до частини третьої цієї статті, втрачають чинність.
+
+У разі визнання Конституційним Судом України акта голови громади, ради громади, окружної, обласної ради таким, що не відповідає Конституції України, Верховна Рада України за поданням Президента України достроково припиняє повноваження голови громади, ради громади, окружної, обласної ради та призначає позачергові вибори у визначеному законом порядку
 
 **Стаття 145.** Права місцевого самоврядування захищаються в судовому порядку.
 
@@ -1417,6 +1467,8 @@
     * актів Президента України;
     * актів Кабінету Міністрів України;
     * правових актів Верховної Ради Автономної Республіки Крим;
+
+    1-1) вирішення за зверненням Президента України питання про  відповідність Конституції України акта голови громади, ради громади, окружної, обласної ради;
 
 2) офіційне тлумачення Конституції України;
 
@@ -1552,6 +1604,22 @@
    Представництво органів державної влади та органів місцевого самоврядування в судах виключно прокурорами або адвокатами здійснюється з 1 січня 2020 року.
 
    Представництво в суді у провадженнях, розпочатих до набрання чинності Законом України "Про внесення змін до Конституції України (щодо правосуддя)", здійснюється за правилами, які діяли до набрання ним чинності, - до ухвалення у відповідних справах остаточних судових рішень, які не підлягають оскарженню.
+
+16-2. Після набрання чинності Законом України "Про внесення змін до Конституції України (щодо децентралізації влади)":
+
+1) одне або декілька поселень (сіл, селищ, міст) з прилеглими територіями набувають статусу громади на підставі та в порядку, визначеному законом;
+
+2) перші місцеві вибори голів громад, до рад громад, окружних, обласних рад проводяться протягом 90 днів після набрання чинності законом, яким встановлюється адміністративно-територіальний устрій;
+
+3) повноваження сільських, селищних, міських голів та депутатів місцевих рад, обраних на перших, чергових виборах у жовтні 2015 року та місцевих виборах у період з жовтня 2015 року до набрання чинності Законом України "Про внесення змін до Конституції України (щодо децентралізації влади)", припиняються з дня набуття повноважень головами громад, відповідними радами громад, окружними, обласними радами, обраними на перших місцевих виборах після набрання чинності законом, яким встановлюється адміністративно-територіальний устрій;
+
+4) Президент України за поданням Кабінету Міністрів України призначає на посади та звільняє з посад голів місцевих державних адміністрацій до призначення відповідних префектів;
+
+5) місцеві державні адміністрації продовжують здійснювати свої повноваження на відповідній території до створення окружними, обласними радами виконавчих комітетів на підставі закону про місцеве самоврядування, що визначає повноваження виконавчих комітетів окружних, обласних рад,  але не пізніше ніж до 1 березня 2021 року;
+
+6) Президент України за поданням Кабінету Міністрів України вперше здійснює призначення префектів після створення відповідними окружними, обласними радами виконавчих комітетів, але не пізніше 1 березня 2021 року;
+
+7) акти голів місцевих державних адміністрацій діють до набрання чинності відповідними актами місцевого самоврядування, актами префектів, інших органів виконавчої влади, ухваленими відповідно до Конституції та законів України
 
 ***
 
