2671-1. про внесення змін до деяких законів України щодо захисту персональних даних, форм та умов надання згоди на їх обробку

--- a/Закони/Про_Єдиний_державний_демографічний_реєстр_та_документи,_що_підтверджують_громадянство_України,_посвідчують_особу_чи_її_спеціальний_статус.md
+++ b/Закони/Про_Єдиний_державний_демографічний_реєстр_та_документи,_що_підтверджують_громадянство_України,_посвідчують_особу_чи_її_спеціальний_статус.md
@@ -262,7 +262,7 @@
 
 2. Надання інформації, відомостей або інших персональних даних про особу, що містяться у Реєстрі, здійснюється виключно у випадках, передбачених законами України, і лише в інтересах національної безпеки, економічного добробуту та захисту прав людини або за згодою самої особи.
 
-3. Інформація, відомості або інші персональні дані про особу, що містяться в Реєстрі, використовуються центральним органом виконавчої влади, що забезпечує формування та реалізує державну фінансову та бюджетну політику, в обсязі, визначеному Законом України "Про верифікацію та моніторинг державних виплат", для верифікації та моніторингу державних виплат.
+3. Інформація, відомості або інші персональні дані про особу, що містяться в Реєстрі, використовуються центральним органом виконавчої влади, що забезпечує формування та реалізує державну фінансову та бюджетну політику виключно за наявності добровільної згоди на їх обробку та в обсязі, визначеному Законом України "Про верифікацію та моніторинг державних виплат", для верифікації та моніторингу державних виплат.
 
 4. Порядок надання інформації з Реєстру визначається Кабінетом Міністрів України.
 
