--- a/Закони/Про_Державний_реєстр_виборців.md
+++ b/Закони/Про_Державний_реєстр_виборців.md
@@ -701,7 +701,7 @@
 
 6. Персональні дані Реєстру у визначених законом випадках можуть бути використані центральним органом виконавчої влади, що реалізує державну політику у сфері громадянства, для здійснення його повноважень.
 
-7. Під час здійснення повноважень щодо верифікації та моніторингу державних виплат центральний орган виконавчої влади, що забезпечує формування та реалізує державну фінансову та бюджетну політику, має право отримувати з Реєстру інформацію про виборців, зокрема таку, що містить персональні дані.
+7. Під час здійснення повноважень щодо верифікації та моніторингу державних виплат центральний орган виконавчої влади, що забезпечує формування та реалізує державну фінансову та бюджетну політику, має право отримувати з Реєстру інформацію про виборців, зокрема таку, що містить персональні дані (виключно за наявності добровільної згоди на їх обробку).
 
 Порядок надання та обсяг інформації з Реєстру визначаються розпорядником Реєстру за погодженням із центральним органом виконавчої влади, що забезпечує формування та реалізує державну фінансову та бюджетну політику.
 
