--- a/Закони/Про_верифікацію_та_моніторинг_державних_виплат.md
+++ b/Закони/Про_верифікацію_та_моніторинг_державних_виплат.md
@@ -72,7 +72,7 @@
 
 1. Орган, що здійснює верифікацію та моніторинг державних виплат, має такі повноваження:
 
-    1) безкоштовно одержувати інформацію, необхідну для здійснення верифікації та моніторингу державних виплат, персональні дані, інформацію з автоматизованих інформаційних систем, реєстрів, баз даних, володільцем, розпорядником та/або адміністратором яких є суб’єкти надання інформації, у тому числі інформацію з обмеженим доступом;
+    1) безкоштовно одержувати інформацію, необхідну для здійснення верифікації та моніторингу державних виплат, персональні дані (виключно за наявності добровільної згоди реципієнтів на їх обробку), інформацію з автоматизованих інформаційних систем, реєстрів, баз даних, володільцем, розпорядником та/або адміністратором яких є суб'єкти надання інформації, крім інформації з обмеженим доступом;
 
     2) користуватися Національною системою конфіденційного зв’язку та іншими технічними засобами;
 
@@ -106,7 +106,7 @@
 
 **Стаття 8.** Взаємодія органу, що здійснює верифікацію та моніторинг державних виплат, із суб’єктами надання інформації під час збору інформації для верифікації державних виплат
 
-1. Суб’єкти надання інформації в обов’язковому порядку та безоплатно надають органу, що здійснює верифікацію та моніторинг державних виплат, інформацію, що визначена законодавством для призначення, нарахування та/або здійснення державних виплат і впливає на визначення права на отримання та розмір таких виплат, персональні дані з автоматизованих інформаційних систем, реєстрів, баз даних, володільцем, розпорядником та/або адміністратором яких вони є, у тому числі інформацію з обмеженим доступом.
+1. Суб'єкти надання інформації в обов'язковому порядку та безоплатно надають органу, що здійснює верифікацію та моніторинг державних виплат, інформацію, що визначена законодавством для призначення, нарахування та/або здійснення державних виплат і впливає на визначення права на отримання та розмір таких виплат, персональні дані з автоматизованих інформаційних систем, реєстрів, баз даних (виключно за наявності добровільної згоди реципієнтів на їх обробку), володільцем, розпорядником та/або адміністратором яких вони є, крім інформації з обмеженим доступом.
 
     У разі нарахування та отримання державних виплат, призначених на сім’ю або домогосподарство, інформація подається стосовно кожного члена сім’ї або домогосподарства.
 
@@ -114,7 +114,7 @@
 
     Надання інформації, що містить банківську таємницю, здійснюється відповідно до Закону України "Про банки і банківську діяльність".
 
-3. Інформаційний обмін із суб’єктами надання інформації, крім обміну інформацією з обмеженим доступом, здійснюється через систему електронної взаємодії державних електронних інформаційних ресурсів.
+3. Інформаційний обмін із суб'єктами надання інформації здійснюється через систему електронної взаємодії державних електронних інформаційних ресурсів.
 
 4. Органи, що здійснюють державні виплати, для перерахування коштів на здійснення таких виплат подають платіжні доручення до органів Державної казначейської служби України та реєстри державних виплат в електронному вигляді органу, що здійснює верифікацію та моніторинг державних виплат.
 
