--- a/Закони/Про_захист_персональних_даних.md
+++ b/Закони/Про_захист_персональних_даних.md
@@ -16,7 +16,7 @@
 
 * володілець персональних даних - фізична або юридична особа, яка визначає мету обробки персональних даних, встановлює склад цих даних та процедури їх обробки, якщо інше не визначено законом;
 
-* згода суб’єкта персональних даних - добровільне волевиявлення фізичної особи (за умови її поінформованості) щодо надання дозволу на обробку її персональних даних відповідно до сформульованої мети їх обробки, висловлене у письмовій формі або у формі, що дає змогу зробити висновок про надання згоди. У сфері електронної комерції згода суб’єкта персональних даних може бути надана під час реєстрації в інформаційно-телекомунікаційній системі суб’єкта електронної комерції шляхом проставлення відмітки про надання дозволу на обробку своїх персональних даних відповідно до сформульованої мети їх обробки, за умови, що така система не створює можливостей для обробки персональних даних до моменту проставлення відмітки;
+* згода суб’єкта персональних даних - добровільне волевиявлення фізичної особи (за умови її поінформованості) щодо надання дозволу на обробку її персональних даних відповідно до сформульованої мети їх обробки, висловлене у письмовій формі", електронній формі або в іншій формі, що чітко вказує про надання такої згоди суб’єктом персональних даних. У сфері електронної комерції згода суб’єкта персональних даних може бути надана під час реєстрації в інформаційно-телекомунікаційній системі суб’єкта електронної комерції шляхом проставлення відмітки про надання дозволу на обробку своїх персональних даних відповідно до сформульованої мети їх обробки, за умови, що така система не створює можливостей для обробки персональних даних до моменту проставлення відмітки;
 
 * знеособлення персональних даних - вилучення відомостей, які дають змогу прямо чи опосередковано ідентифікувати особу;
 
@@ -182,7 +182,7 @@
 
     1) згода суб’єкта персональних даних на обробку його персональних даних;
 
-    2) дозвіл на обробку персональних даних, наданий володільцю персональних даних відповідно до закону виключно для здійснення його повноважень;
+    2) необхідність виконання володільцями персональних даних — органами державної влади та органами місцевого самоврядування передбачених законом повноважень за умови наявності згоди суб’єкта персональних даних на обробку його персональних даних;
 
     3) укладення та виконання правочину, стороною якого є суб’єкт персональних даних або який укладено на користь суб’єкта персональних даних чи для здійснення заходів, що передують укладенню правочину на вимогу суб’єкта персональних даних;
 
@@ -191,6 +191,40 @@
     5) необхідність виконання обов’язку володільця персональних даних, який передбачений законом;
 
     6) необхідність захисту законних інтересів володільця персональних даних або третьої особи, якій передаються персональні дані, крім випадків, коли потреби захисту основоположних прав і свобод суб’єкта персональних даних у зв’язку з обробкою його даних переважають такі інтереси.
+
+**Стаття 11-1.** Умови надання згоди на обробку персональних даних 
+
+1. Згода суб’єкта персональних даних на обробку його персональних даних надається таким суб’єктом шляхом вчинення чіткої стверджувальної дії, здійсненням якої суб’єкт персональних даних добровільно та однозначно погоджується на обробку його персональних даних. 
+
+    Реалізація прав та свобод суб’єкта персональних даних не може залежати від надання суб’єктом згоди на обробку його персональних даних. 
+
+2. Згода суб’єкта персональних даних на обробку його персональних даних може бути надана: 
+
+    1) у формі письмової заяви, анкети, бланку, тощо, в тому числі поданої електронними засобами; 
+
+    2) в електронній формі під час відвідування веб-сайту або користування електронною інформаційною системою, шляхом заповнення передбаченої інтерфейсом форми, проставлення у відповідному полі відмітки/позначки;, 
+
+    3) шляхом обрання відповідних технічних налаштувань в інтерфейсі веб-сайта, операційній системі, програмному забезпеченні, чи мобільному додатку які передбачають обробку персональних даних; 
+
+    4) через іншу ствердну дію чи поведінку, яка однозначно вказує на те, що суб’єкт персональних даних у вказаному контексті згоден на подальшу обробку його персональних даних. 
+
+3. Не можуть розглядатися в якості згоди суб’єкта персональних даних на обробку його персональних даних: 
+
+    1) мовчазні та невизначені дії суб’єкта персональних даних; 
+
+    2) автоматичне заповнення передбаченої інтерфейсом форми або попереднє проставлення у відповідному полі відмітки (позначки) без безпосередньої участі конкретного суб’єкта персональних даних; 
+
+    3) встановлені за замовчуванням налаштування веб-сайту, операційної системи, програмного забезпечення, мобільного додатку; 
+
+    4) бездіяльність такого суб’єкта. 
+
+4. Згода суб’єкта персональних даних на обробку його персональних даних повинна бути: добровільною, поінформованою, конкретною, змістовною та чіткою. 
+
+5. Недотримання вимог щодо згоди суб’єкта персональних даних на обробку його персональних даних, встановлених цією статтею, тягне за собою недійсність такої згоди з моменту її надання. 
+
+6. Обов’язок доведення факту надання суб’єктом персональних даних згоди на обробку його даних покладається на володільця. Володілець персональних даних повинен забезпечити такі процедуру, механізм та порядок надання згоди, які передбачатимуть можливість підтвердження дотримання встановлених цією статтею вимог до згоди суб’єкта персональних даних на обробку його персональних даних. 
+
+7. Якщо обробка персональних даних здійснюється на підставі згоди суб'єкта персональних даних, відповідний суб’єкт має право відкликати згоду в будь-який момент. Відкликання згоди не повинно впливати на законність обробки, що ґрунтувалася на згоді до її відкликання. Володілець персональних даних повинен однаково забезпечити суб’єкту персональних даних можливість як відкликати, так і надати згоду.
 
 **Стаття 12.** Збирання персональних даних
 
